# anvil

./: .gitignore  README.md  anvil.py  configuration_set_parse.py  job_build.py  job_gen.py  job_init.py  job_list.py  project_rules.toml  requirements.txt
launcher/: anvil  anvil.bat
scaffolds/: .clang-tidy  .clang-tidy.j2  CMakeLists.txt.j2  CMakePresets.json  CMakePresets.json.j2  build.py  build.py.j2  project_rules.toml  vcpkg.json.j2
scaffolds/cmake_modules/: clang_tidy.cmake  clang_tidy.cmake.j2  compiler_msvc.cmake  compiler_msvc.cmake.j2  compiler_posix.cmake  compiler_posix.cmake.j2  dependency_manager.cmake  pch.cmake.j2  sanitizer.cmake.j2  utils.cmake
scaffolds/main_module/: CMakeLists.txt.j2  main.cpp
scaffolds/module/: CMakeLists.txt.j2
scaffolds/tests/: CMakeLists.txt  CMakeLists.txt.j2
